After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 733433 - Flash window doesn't go away
Flash window doesn't go away
Status: RESOLVED FIXED
Product: cheese
Classification: Applications
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: Cheese Maintainer(s)
Cheese Maintainer(s)
: 710445 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2014-07-20 00:52 UTC by Benjamin Herr
Modified: 2014-10-09 08:10 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fixes the issue. (2.86 KB, patch)
2014-07-20 00:52 UTC, Benjamin Herr
none Details | Review
reworked patch (2.95 KB, patch)
2014-07-20 07:51 UTC, David King
committed Details | Review

Description Benjamin Herr 2014-07-20 00:52:36 UTC
Created attachment 281215 [details] [review]
Fixes the issue.

On my not-fully-Gnome system the white window representing the camera flash when a photo is captured doesn't go away. This appears to be because when the exponentially falling opacity reaches 0.0392157, after being reduced, set as widget opacity, and retrieved from the widget again, it is still 0.0392157 and so it never reaches the cutoff of 0.01 for being hidden. I guess xcompmgr or something doesn't store the opacity with enough granularity.
Comment 1 David King 2014-07-20 07:51:47 UTC
Created attachment 281226 [details] [review]
reworked patch

Thanks for the bug report and patch. I reworked the patch slightly (mostly cosmetically). Can you test that it still works for you?
Comment 2 Benjamin Herr 2014-07-20 11:55:45 UTC
Yup, still works for me.
Comment 3 David King 2014-07-20 18:32:46 UTC
Comment on attachment 281226 [details] [review]
reworked patch

Thanks, pushed to master as 1c40135ddbd7f99ec8a7f1eafb91889d83b0108a.
Comment 4 David King 2014-10-09 08:10:31 UTC
*** Bug 710445 has been marked as a duplicate of this bug. ***