Track flash opacity explicitly

Retrieving the opacity of the flash, reducing it by an exponentially
small step, and setting it again does not always actually decrease the
widget's opacity, and so the fading does not actually terminate.

Incidentally, also unset the flash timeout tags to avoid calling
g_source_remove() spuriously.

https://bugzilla.gnome.org/show_bug.cgi?id=733433